--- a/index.html
+++ b/index.html
@@ -30,14 +30,18 @@
                     <li>Contact</li>
                 </ul>
             </nav>
-            <button><i class="fa-solid fa-toggle-on"></i></button>
+            <div class="btn-ctn">
+                <button><i class="fa-solid fa-toggle-on"></i></button>
+            </div>
         </div>
     </header>
     <!-- /header  -->
 
     <!-- main  -->
     <main>
-        <div class="container"></div>
+        <h2>Meet Our Team</h2>
+        <div><span>"we are always ready to support you in your projects"</span></div>
+        <ul class="container ctn-card"></ul>
     </main>
     <!-- /main  -->
     
